@@ -81,7 +81,7 @@
                     <hr />
                     <dl>
                         <dt>Version</dt>
-                        <dd>3.0.0</dd>
+                        <dd>3.2.0</dd>
                         <dt>Laws Last Updated</td>
                         <dd>October, 2020</dd>
                         <dt>Source</dt>
