@@ -1,6 +1,7 @@
-<h3>New in version 3.0</h3>
+<h3>New in version 3.2</h3>
 <ul>
     <li>Updates laws to include 2020 legislative session.</li>
+    <li>New Sharing Feature</li>
 </ul>
 <div id="update-action">
     <a class="btn btn-default update-dismiss">Dismiss</a> 
